# MANDY-Magnetic-Neutron-Diffraction

./: LICENSE  MANIFEST.in  PKG-INFO  README.md  setup.cfg  setup.py
Examples/Cr/: Cr_SDW.py  Grid_Cr_SDW.py
Examples/NbFe2/: Grid_NbFe2_SDW.py  NbFe2_Example.py
Examples/helical_cycloidal/: Chromium.cif  Generic_Moodulations.py
NbFe2 Example/: NbFe2 Example.py  NbFe2_Example.py  NbFe2_mp-568901_primitive.cif  dataclasstest.py  testing_dataclasses.py  vectoreqn.py
mandy/: MANIFEST.in  ReadFormFactor.py  SelectionRule.py  __init__.py  crystalBuilder.py  diffraction.py  mandyCrystal.py  requestNIST.py  setup.py  test.py
mandy.egg-info/: PKG-INFO  SOURCES.txt
mandy/mandy/: ReadFormFactor.py  SelectionRule.py
