[metadata]
name = mandy
version = 0.63
author = John Sturt
author_email = john.sturt.2018@live.rhul.ac.uk
description = A python package in development for the simulation of magnetic neutron diffraction from crystals generated with CIF files. 
url = https://github.com/jsturt/MANDY-Magnetic-Neutron-Diffraction

[options]
packages = mandy
install_requires = 
	pandas
	numpy
	matplotlib
	pyqt5
	crystals
	gemmi
	requests

[options.package_data]
mandy = 
	atomic_data.csv
	FormFactorData.dat

[egg_info]
tag_build = 
tag_date = 0

